cabal-version: 3.0
name:          trustless-sidechain
version:       8.0.0
synopsis:      Smart contract code used by the partner-chains project.
homepage:
  https://github.com/input-output-hk/partner-chains-smart-contracts

bug-reports:
  https://github.com/input-output-hk/partner-chains-smart-contracts

license:       Apache-2.0
author:        Michal Jankun, Krisztian Pinter
maintainer:    Michal Jankun, Krisztian Pinter
copyright:     (c) 2022-2025 IOG
build-type:    Simple

source-repository head
  type:     git
  location:
    https://github.com/input-output-hk/partner-chains-smart-contracts

-- Common sections

common common-lang
  ghc-options:
    -Wall -Wcompat -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wredundant-constraints -Werror
    -fplugin-opt PlutusTx.Plugin:target-version=1.0.0

  build-depends:      base
  default-extensions:
    BangPatterns
    BlockArguments
    DataKinds
    DerivingVia
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    KindSignatures
    LambdaCase
    NamedFieldPuns
    NumericUnderscores
    OverloadedStrings
    PatternSynonyms
    RecordWildCards
    ScopedTypeVariables
    TypeApplications
    ViewPatterns

  default-language:   Haskell2010

common common-lang-optimized-notrace
  import:      common-lang
  ghc-options:
    -fplugin-opt PlutusTx.Plugin:remove-trace -fplugin-opt
    PlutusTx.Plugin:optimize

common common-lang-traced
  import:      common-lang
  ghc-options: -fplugin-opt PlutusTx.Plugin:preserve-logging

common common-script-lang
  ghc-options:
    -fobject-code -fno-ignore-interface-pragmas
    -fno-omit-interface-pragmas -fplugin-opt
    PlutusTx.Plugin:defer-errors

common common-optimized
  ghc-options: -O2

common common-optimized-parallel
  import:      common-optimized
  ghc-options: -threaded -rtsopts -with-rtsopts=-N

-- trustless-sidechain-serialise, trustless-sidechain-serialise-traced and script-size only pick up
-- Plutus plugin settings if all script modules are directly referenced through other-modules, not through a
-- library dependency. We list them all here for convenience.
common common-source-other-modules
  other-modules:
    TrustlessSidechain.AlwaysFailingScripts
    TrustlessSidechain.AlwaysPassingScripts
    TrustlessSidechain.CommitteeCandidateValidator
    TrustlessSidechain.DParameter
    TrustlessSidechain.EncodeHelpers
    TrustlessSidechain.ExampleVFunction
    TrustlessSidechain.GovernedMap
    TrustlessSidechain.IlliquidCirculationSupply
    TrustlessSidechain.PermissionedCandidates
    TrustlessSidechain.Reserve
    TrustlessSidechain.ScriptId
    TrustlessSidechain.Types
    TrustlessSidechain.Utils
    TrustlessSidechain.Versioning

-- Libraries

library
  import:             common-lang, common-script-lang
  exposed-modules:
    TrustlessSidechain.AlwaysFailingScripts
    TrustlessSidechain.AlwaysPassingScripts
    TrustlessSidechain.CommitteeCandidateValidator
    TrustlessSidechain.DParameter
    TrustlessSidechain.EncodeHelpers
    TrustlessSidechain.ExampleVFunction
    TrustlessSidechain.GovernedMap
    TrustlessSidechain.IlliquidCirculationSupply
    TrustlessSidechain.PermissionedCandidates
    TrustlessSidechain.Reserve
    TrustlessSidechain.ScriptId
    TrustlessSidechain.Types
    TrustlessSidechain.Utils
    TrustlessSidechain.Versioning

  default-extensions: NoImplicitPrelude
  build-depends:
    , base16-bytestring
    , bytestring
    , cardano-api
    , plutus-ledger-api
    , plutus-tx
    , plutus-tx-plugin

  hs-source-dirs:     src

-- Executables

executable trustless-sidechain-serialise
  import:
    common-lang-optimized-notrace, common-lang, common-optimized-parallel, common-source-other-modules

  default-extensions: NoImplicitPrelude
  main-is:            Main.hs
  build-depends:
    , aeson
    , base16-bytestring
    , bytestring
    , cardano-api
    , casing
    , plutus-ledger-api
    , plutus-tx
    , plutus-tx-plugin
    , trustless-sidechain

  hs-source-dirs:     app/serialise src

executable trustless-sidechain-serialise-traced
  import:
    common-lang-traced, common-script-lang, common-optimized-parallel, common-source-other-modules

  default-extensions: NoImplicitPrelude
  main-is:            Main.hs
  build-depends:
    , aeson
    , base16-bytestring
    , bytestring
    , cardano-api
    , casing
    , plutus-ledger-api
    , plutus-tx
    , plutus-tx-plugin

  hs-source-dirs:     app/serialise src

-- Tests

test-suite trustless-sidechain-test
  import:         common-lang, common-optimized-parallel, common-script-lang
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  other-modules:
    Test.TrustlessSidechain.Golden.Tests
    Test.TrustlessSidechain.Golden.Types
    Test.TrustlessSidechain.Golden.Versioning
    Test.TrustlessSidechain.GoldenTest

  build-depends:
    , base16-bytestring
    , bytestring
    , plutus-ledger-api
    , plutus-tx
    , tasty
    , tasty-golden
    , text
    , trustless-sidechain

  hs-source-dirs: test

test-suite script-size
  import:
    common-lang, common-lang-optimized-notrace, common-optimized-parallel, common-script-lang, common-source-other-modules

  default-extensions: NoImplicitPrelude
  type:               exitcode-stdio-1.0
  main-is:            Main.hs
  other-modules:      Sizer
  build-depends:
    , bytestring
    , cardano-api
    , plutus-core
    , plutus-ledger-api
    , plutus-tx
    , plutus-tx-plugin
    , tagged
    , tasty
    , trustless-sidechain

  hs-source-dirs:     test/script-size src

test-suite roundtrip
  import:         common-lang, common-optimized-parallel
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  other-modules:  Laws
  build-depends:
    , bytestring
    , plutus-ledger-api
    , plutus-tx
    , plutus-tx-plugin
    , QuickCheck
    , secp256k1-haskell
    , tasty
    , tasty-quickcheck
    , trustless-sidechain

  hs-source-dirs: test/roundtrip

test-suite script-specs
  import:
    common-lang, common-optimized-parallel, common-script-lang, common-lang-traced

  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  other-modules:
    Perf.CommitteeCandidateValidator
    Perf.DParameter
    Perf.GovernedMap
    Perf.IlliquidCirculationSupply
    Perf.PermissionedCandidates
    Perf.Reserve
    Perf.Versioning
    ScriptUtils
    Specs.CommitteeCandidateValidator
    Specs.DParameter
    Specs.GovernedMap
    Specs.IlliquidCirculationSupply
    Specs.PermissionedCandidates
    Specs.Reserve
    Specs.Versioning
    TestValues

  build-depends:
    , aeson
    , base16-bytestring
    , bytestring
    , cardano-api
    , lens
    , plutus-core
    , plutus-ledger-api
    , plutus-tx
    , plutus-tx-plugin
    , tasty
    , tasty-golden
    , tasty-hunit
    , text
    , trustless-sidechain

  hs-source-dirs: test/script-specs
